--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Xiaoyang Zhu"
 title_separator          : "-"
 name                     : &name "Xiaoyang Zhu"
-description              : &description "I'm applying for PhD in Statistics in the U.S."
+description              : &description "I'm applying for PhD in Statistics and related areas in the U.S."
 url                      : "https://julyaug.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "https://github.com/JulyAug/julyaug.github.io.git"
