--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Xiaoyang Zhu"
 title_separator          : "-"
 name                     : &name "Xiaoyang Zhu"
 description              : &description "I'm applying for PhD in Statistics and related areas in the U.S."
-url                      : "https://julyaug.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://julyaug.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "https://github.com/JulyAug/julyaug.github.io.git"
+repository               : "https://github.com/JulyAug/JulyAug.github.io.git"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
